force-app/main/default/objects/Idea_Comment__c/Idea_Comment__c.object-meta.xml
<CustomObject>
    <label>Idea Comment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Idea Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>