force-app/main/default/objects/Idea_Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Idea Comments</relationshipLabel>
    <relationshipName>Idea_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>