force-app/main/default/objects/Idea_Comment__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea</label>
    <referenceTo>Idea</referenceTo>
    <relationshipName>Idea_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>